Add support for AllLike and AllNotLike operators
(cherry picked from commit 2d1d5792c54e7422dbb64fac5894ebcdcd1c92a0)